# PATH: joj/src/platform/CMakeLists.txt

cmake_minimum_required(VERSION 3.22)
project(joj)

add_library(jojPlatform
	STATIC
	window.cpp
    input.cpp
)

target_include_directories(jojPlatform
    PRIVATE
    ${CMAKE_CURRENT_SOURCE_DIR}/../../include/joj/
)

if(WIN32)
    add_subdirectory(win32)

    target_link_directories(
        jojPlatform
        PUBLIC 
        ${CMAKE_CURRENT_SOURCE_DIR}/win32/
    )

    target_link_libraries(jojPlatform PUBLIC jojWin32Platform)
endif()
